--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,14 @@
-# DataSource settings: set here your own configurations for the database 
-# connection. In this example we have "netgloo_blog" as database name and 
-# "root" as username and password.
-spring.datasource.driverClassName = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost/ConspectSite
-spring.datasource.username = root
-spring.datasource.password = root
-
-# Show or not log for each sql query
-spring.jpa.show-sql = true
-
-# Hibernate ddl auto (create, create-drop, update)
+spring.datasource.url=jdbc:mysql://localhost:3306/ConspectSite
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
+spring.user.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto = update
-
-# Naming strategy
-#spring.jpa.hibernate.naming.implicit-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-
-# Use spring.jpa.properties.* for Hibernate native properties (the prefix is
-# stripped before adding them to the entity manager)
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=conspect.site@gmail.com
+spring.mail.password=qwaszx@1
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
