--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.6</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-dbcp</groupId>
